# area-net

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE.md  README.md  start.sh
assets/: small-network.d2
config/network/: alice.toml  bob.toml  carol.toml  dave.toml  default.toml  erin.toml  eve.toml
documentation/: README.md  controller.md  network-discovery.md  peer.md
profiles/: bob.json
profiles/bob/: bob.json
profiles/carol/: carol.json
profiles/dave/: dave.json
profiles/erin/: erin.json
src/: codec.rs  config.rs  decoder.rs  error.rs  frame.rs  lib.rs  parse.rs
src/message/: conn_rejection.rs  conn_request.rs  conn_response.rs  contact_request.rs  contact_response.rs  error.rs  heartbeat_request.rs  heartbeat_response.rs  mod.rs
src/msg/: conn_request.rs  conn_response.rs  heartbeat_request.rs  heartbeat_response.rs  mod.rs
src/network/: command.rs  controller.rs  event.rs  mod.rs  peer.rs
