[package]
authors = ["Matthieu Paindavoine <matthieu@area403.io"]
autotests = false
categories = [ "application" ]
description = "Peer 2 Peer Network Controller"
edition = "2021"
keywords = [ "networking" ]
license = "LICENSE.md"
name = "area-net"
readme = "README.md"
repository = "https://github.com/crocme10/area-net.git"
version = "0.0.3"

[dependencies]
async-recursion = "^1.0.0"
atoi = "^2.0.0"
axum = "^0.5"
axum-extra = { version = "^0.3", features = ["spa"] }
bytes = "^1.2.1"
chrono = "^0.4.23"
clap = { version = "^4.0.29", features = [ "derive" ] }
config = "^0.13"
error-stack = "^0.2"
futures = "^0.3"
hyper = "^0.14.20"
log = "^0.4"
memchr = "^2.5.0"
serde = { version = "^1.0", features = [ "derive" ] }
serde_json = "^1.0"
tempfile = "^3.3.0"
tokio = { version = "1.22", features = ["macros", "rt-multi-thread", "fs", "io-util", "rt", "sync", "time" ] }
tokio-util = { version = "0.7.4", features = [ "codec" ]}
tower = "^0.4"
tower-http = { version = "^0.3", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3" }
uuid = { version = "^1.2.2", features = [ "serde" ]}

[dev-dependencies]
assert_cmd = "^2.0.6"
predicates = "^2.1.3"
walkdir = "^2.3.2"

[[bin]]
name = "area-net"
path = "src/bin/area-net.rs"
